Contact us Page login overflow fixed

--- a/public/assets/css/contactus.css
+++ b/public/assets/css/contactus.css
@@ -1,4 +1,4 @@
-.contactss{
+ .contactss{
     min-height: 100vh;
     padding: 50px 100px; 
     display: flex;
@@ -34,7 +34,7 @@
     flex-direction: column;
 }
 .containerss .contactInfo .boxes{
-    position: relative;
+    /* position: relative; */
     padding: 20px 0;
     display: flex;
 }
@@ -77,7 +77,7 @@ font-weight: 300;
     font-weight: 500;
 }
 .contactForm .inputBox{
-    position: relative;
+    /* position: relative; */
     width: 100%;
     margin-top: 10px;
 }
@@ -92,7 +92,7 @@ font-weight: 300;
     resize: none;
 }
 .contactForm .inputBox span{
-    position: absolute;
+    /* position: absolute; */
     left: 0;
     padding: 5px 0;
     font-size: 16px;
@@ -118,7 +118,7 @@ font-weight: 300;
   font-family: 'BenchNine', Arial, sans-serif;
   font-size:20px;
   margin:0px;
-  position:relative;
+  /* position:relative; */
   text-transform:uppercase;
 }
 .scanfcode:before,
@@ -161,7 +161,7 @@ font-weight: 300;
     line-height: 1em;
 }
 .sci{
-   position: relative;
+   /* position: relative; */
    display: flex;
    gap: 30px;
    margin: 20px 0; 
@@ -205,4 +205,4 @@ font-weight: 300;
     .contactForm{
         width: 100%;
     }
-}
+} 
